--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,16 @@
   box-sizing: border-box;
 }
 
+.red-text {
+  color: red;
+  text-align: left;
+  padding-left: 6%;
+  font-weight: bold;
+  font-size: 12px;
+}
+
 .login {
-  padding: 100px;
+  padding: 80px;
 }
 
 .login form {
